# Project

./: README.md
gtk_youtube/: Makefile  README.md  deps
gtk_youtube/include/: gtkabout.h  ytclient.h
gtk_youtube/src/: gtkabout.cpp  main.cpp  ytclient.cpp
hv2ray/: CMakeLists.txt  README.md  deps
hv2ray/debian/: changelog  control  copyright  rules
hv2ray/desktop/: CMakeLists.txt  hv2ray.desktop  org.freedesktop.policykit.pkexec.hv2ray.policy  starthv2ray
hv2ray/src/: CMakeLists.txt  about.cpp  about.h  about.ui  hv2ray.cpp  hv2ray.h  hv2ray.ui  main.cpp  notifyservice.cpp  qplaintext.cpp  qplaintext.h  resource.qrc
oslg/: AUTHORS  DISTLIST  Makefile.in  NEWS  README.md  aclocal.m4  build_env.mk  config.h  config.h.in  config.status  configure  configure.ac  genkernsyms.sh  gensymlist.sh  trigtables.c
oslg/bus/usb/: usbhub.c
oslg/commands/: usbtest.c
oslg/commands/efi/: efifwsetup.c  efivars.c
oslg/commands/i386/pc/: biosetup.c  pxecfg.c
oslg/conf/: any-emu.mk  any-emu.rmk  common.mk  common.rmk  gcry.mk  gcry.rmk  i386-coreboot.mk  i386-pc.mk  i386-pc.rmk  i386.mk  tests.mk  x86_64-efi.mk  x86_64-efi.rmk
oslg/debian/: README  changelog  control  copyright  oslg-boot-install  oslg-core-efi.install  oslg-efi.install  oslg-pc.install  oslg.install  rules  script  update-oslg
oslg/debian/default/: oslg
oslg/disk/: lvm.c  usbms.c
oslg/disk/efi/: efidisk.c
oslg/disk/i386/: usbms.c
oslg/docs/: oslg-pc  oslg.info
oslg/efiemu/: main.c  mm.c
oslg/fonts/: font.lst
oslg/fs/: jfs.c  minix.c  sfs.c  ufs.c
oslg/fs/efi/: netfs.c
oslg/gfxmenu/: gui_list.c  view.c  widget-box.c
oslg/include/grub/: charset.h  controller.h  dialog.h  fbblit.h  fbfill.h  gpt_partition.h  list.h  menu_data.h  misc.h  obj.h  test.h  tree.h  types.h  uitree.h  video.h  widget.h
oslg/include/grub/efi/: api.h  efi.h  graphics_output.h  load_file.h
oslg/include/grub/efiemu/: efiemu.h  runtime.h
oslg/include/grub/lib/: envblk.h
oslg/include/grub/util/: misc.h  obj.h
oslg/kern/: ext2.c  main.c  memdisk.c
oslg/kern/efi/: efi.c
oslg/kern/x86_64/efi/: callwrap.S  startup.S
oslg/lib/: LzmaEnc.c  autolist.c  uitree.c
oslg/lib/i386/: relocator16.c  relocator16_asm.S
oslg/lib/libgcrypt-grub/cipher/: ChangeLog  crc.c  crypto.lst  md4.c  md5.c  rmd160.c  sha1.c  sha256.c  sha512.c  tiger.c  whirlpool.c
oslg/loader/: multiboot_loader.c  xnu.c
oslg/loader/i386/: linux.c
oslg/loader/i386/efi/: linux.c
oslg/loader/i386/pc/: linux.c
oslg/menu/ext/: data_type.c  dialog.c  gfx_region.c  main.c  region.c  text_region.c  widget.c
oslg/mmap/efi/: mmap.c
oslg/normal/: main.c  term.c
oslg/partmap/: acorn.c
oslg/term/: usb_keyboard.c
oslg/term/i386/pc/: vga.c
oslg/tests/lib/: functional_test.c
oslg/themes/bgrt/: menus  theme
oslg/themes/bgrt/icons/: small  small_x30
oslg/themes/conf.d/: 10_hotkey
oslg/ui/: coreui.c  coreui.h  coreui_emu.c  screen.c  setup_gui.c  ui_circular_progress.c  ui_date.c  ui_image.c  ui_panel.c  ui_password.c  ui_progressbar.c  ui_text.c
oslg/util/: grub-adduser.in  grub-deluser.in  grub-emu.c  grub-mkconfig_lib.in  grub-mkimg.c  grub-mkmod.c  grub-mkpasswd-pbkdf2.c  grub-mkpasswd.c  grub-mkrawimage.c  grub-mkrescue.in  grub-objdump.c  grub-symdb.c  obj.c  obj_dump.c  obj_elf.c  obj_macho.c  obj_pe.c  pci.c  update-grub_lib.in  usb.c
oslg/util/efi/: grub-mkimage.c
oslg/util/grub-install/: grub-install.py  lib.py
oslg/util/grub-mkconfig/: grub-mkconfig.py  libmkconfig.py  os_prober.py  theme_config.py  traslate.py  vmlinuz.py
oslg/util/i386/efi/: grub-install.in
oslg/util/i386/pc/: grub-setup.c
oslg/util/mkisofs/: tree.c
oslg/video/: bitmap_scale.c  video.c
oslg/video/efi/: efi_gop.c  efi_uga.c
qmlapp/: CMakeLists.txt  README.md
qmlapp/doc/: credit.txt  syntax.txt
qmlapp/qml/: CMakeLists.txt
qmlapp/qml/GShow/: GShow  qml.txt
qmlapp/qml/Video/: qml.txt  resources.qrc  video
qmlapp/src/: CMakeLists.txt  appsettings.cpp  appsettings.h  object.cpp  parser.cpp  qmlapp.cpp  qmlapp.h  qmlapp.pro
qrfx/: CMakeLists.txt  README.md  deps
qrfx/lib/qrc/: CMakeLists.txt
qrfx/lib/qrc/resources/: network  resource.qrc
qrfx/lib/qrc/src/: rc.cpp  rc.h  rc_global.h
qrfx/src/: CMakeLists.txt  actions.cpp  console_widget.cpp  console_widget.h  info.cpp  info.h  info.ui  main.cpp  path.cpp  qrfx.cpp  qrfx.h  qrfxp.cpp  toolbar.cpp
qrfx/systemd/: qrfx-recovery  qrfx-recovery.service  qrfx-recovery.target
swh/: README.md  header.py  host-info.sh  method.py  term.py
tsmaker/: Makefile  README.md
tsmaker/include/: core.h  pid.h  process_file.h  url.h
tsmaker/include/indicators/: progress_bar.hpp
tsmaker/src/: auto_comp.cpp  core.cpp  decompress.cpp  pid.cpp  process_file.cpp  url.cpp
xglshow/: CMakeLists.txt  README.md  deps
xglshow/debian/: changelog  control  copyright  rules  xglrun.sh  xglshow-64.install  xglshow-64.preinst  xglshow-64.prerm  xglshow.install  xglshow.preinst  xglshow.prerm
xglshow/src/: CMakeLists.txt  xglshow.cpp  xglshow.h  xglshowf.cpp
